# agent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE_HEADER  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_audit_example.py  test_enhanced_audit.py
.github/workflows/: ci.yml  lint.yml
Paper/research/: Paper.md  Workflow.md
Static_agent/Slither_agent/: pre_slither_validator.py  slither_to_json_with_diagnostics.py  solidity_syntax_fixer.py
audit_engine/architecture_plan/: arc with canonical swc reg.txt  architecture.txt
audit_engine/core/: __init__.py  config.py  engine.py  report_generator.py  schemas.py  vulnerability_patterns.py
audit_engine/dynamic_analysis/: __init__.py  adversarial_fuzz.py  config.py  echidna_adapter.py
audit_engine/scoring/: scoring_engine.py  severity_mapping.py
audit_engine/static_analysis/: base.py  manticore_adapter.py
audit_engine/utils/: file_handler.py  logger.py
data/contracts/: .gitkeep
data/datasets/: .gitkeep
data/schemas/: item_create.json  item_update.json  job_request.json  job_response.json  pagination_params.json
docs/: agents.md  api.md  architecture.md  pipelines.md  schemas_validation.md  setup.md  telemetry.md
models/gnn/: .gitkeep  README.md
models/transformers/: .gitkeep
scripts/: format.sh  generate_schemas.py  lint.sh  test.sh
src/oal_agent/: __init__.py  cli.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_coordinator.py  test_storage_service.py
tests/load/: locustfile.py
tests/unit/: test_analysis_router.py  (+29 more)
(+51 files in other folders)
